// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evaluateSum golden snapshots (b140.10.2 phase-0) > disabled_targets — both targets off → sumTargetMag=null 1`] = `
{
  "correctedCoherent": true,
  "freqGridLen": 512,
  "perBandCorrected": [
    {
      "mag": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
      "phase": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
    },
    {
      "mag": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
      "phase": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
    },
  ],
  "sumCorrectedMag": {
    "10000Hz": 6.0206,
    "1000Hz": 6.0206,
    "100Hz": 6.0206,
    "18000Hz": 6.0206,
    "25Hz": 6.0206,
    "5000Hz": 6.0206,
    "500Hz": 6.0206,
  },
  "sumCorrectedPhase": {
    "10000Hz": 0,
    "1000Hz": 0,
    "100Hz": 0,
    "18000Hz": 0,
    "25Hz": 0,
    "5000Hz": 0,
    "500Hz": 0,
  },
  "sumTargetMag": null,
  "sumTargetPhase": null,
}
`;

exports[`evaluateSum golden snapshots (b140.10.2 phase-0) > partial_range_band — second band 1k-20k only, extension fills lows 1`] = `
{
  "correctedCoherent": true,
  "freqGridLen": 512,
  "perBandCorrected": [
    {
      "mag": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
      "phase": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
    },
    {
      "mag": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
      "phase": {
        "10000Hz": 10,
        "1000Hz": 10,
        "100Hz": 10,
        "18000Hz": 10,
        "25Hz": 10,
        "5000Hz": 10,
        "500Hz": 10,
      },
    },
  ],
  "sumCorrectedMag": {
    "10000Hz": 5.987484,
    "1000Hz": 5.987484,
    "100Hz": 5.987484,
    "18000Hz": 5.987484,
    "25Hz": 5.987484,
    "5000Hz": 5.987484,
    "500Hz": 5.987484,
  },
  "sumCorrectedPhase": {
    "10000Hz": 5,
    "1000Hz": 5,
    "100Hz": 5,
    "18000Hz": 5,
    "25Hz": 5,
    "5000Hz": 5,
    "500Hz": 5,
  },
  "sumTargetMag": {
    "10000Hz": 6.0206,
    "1000Hz": 6.0206,
    "100Hz": 6.0206,
    "18000Hz": 6.0206,
    "25Hz": 6.0206,
    "5000Hz": 6.0206,
    "500Hz": 6.0206,
  },
  "sumTargetPhase": {
    "10000Hz": 0,
    "1000Hz": 0,
    "100Hz": 0,
    "18000Hz": 0,
    "25Hz": 0,
    "5000Hz": 0,
    "500Hz": 0,
  },
}
`;

exports[`evaluateSum golden snapshots (b140.10.2 phase-0) > power_sum_fallback — band b has null phase → correctedCoherent=false 1`] = `
{
  "correctedCoherent": false,
  "freqGridLen": 512,
  "perBandCorrected": [
    {
      "mag": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
      "phase": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
    },
    {
      "mag": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
      "phase": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
    },
  ],
  "sumCorrectedMag": {
    "10000Hz": 3.0103,
    "1000Hz": 3.0103,
    "100Hz": 3.0103,
    "18000Hz": 3.0103,
    "25Hz": 3.0103,
    "5000Hz": 3.0103,
    "500Hz": 3.0103,
  },
  "sumCorrectedPhase": null,
  "sumTargetMag": {
    "10000Hz": 6.0206,
    "1000Hz": 6.0206,
    "100Hz": 6.0206,
    "18000Hz": 6.0206,
    "25Hz": 6.0206,
    "5000Hz": 6.0206,
    "500Hz": 6.0206,
  },
  "sumTargetPhase": {
    "10000Hz": 0,
    "1000Hz": 0,
    "100Hz": 0,
    "18000Hz": 0,
    "25Hz": 0,
    "5000Hz": 0,
    "500Hz": 0,
  },
}
`;

exports[`evaluateSum golden snapshots (b140.10.2 phase-0) > single_flat_band — baseline sanity 1`] = `
{
  "correctedCoherent": true,
  "freqGridLen": 512,
  "perBandCorrected": [
    {
      "mag": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
      "phase": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
    },
  ],
  "sumCorrectedMag": {
    "10000Hz": 0,
    "1000Hz": 0,
    "100Hz": 0,
    "18000Hz": 0,
    "25Hz": 0,
    "5000Hz": 0,
    "500Hz": 0,
  },
  "sumCorrectedPhase": {
    "10000Hz": 0,
    "1000Hz": 0,
    "100Hz": 0,
    "18000Hz": 0,
    "25Hz": 0,
    "5000Hz": 0,
    "500Hz": 0,
  },
  "sumTargetMag": {
    "10000Hz": 0,
    "1000Hz": 0,
    "100Hz": 0,
    "18000Hz": 0,
    "25Hz": 0,
    "5000Hz": 0,
    "500Hz": 0,
  },
  "sumTargetPhase": {
    "10000Hz": 0,
    "1000Hz": 0,
    "100Hz": 0,
    "18000Hz": 0,
    "25Hz": 0,
    "5000Hz": 0,
    "500Hz": 0,
  },
}
`;

exports[`evaluateSum golden snapshots (b140.10.2 phase-0) > two_bands_alignment_delay — 1ms delay on band b rotates phase 1`] = `
{
  "correctedCoherent": true,
  "freqGridLen": 512,
  "perBandCorrected": [
    {
      "mag": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
      "phase": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
    },
    {
      "mag": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
      "phase": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
    },
  ],
  "sumCorrectedMag": {
    "10000Hz": 5.960815,
    "1000Hz": 6.017673,
    "100Hz": 5.573285,
    "18000Hz": 4.291645,
    "25Hz": 5.993423,
    "5000Hz": 5.960591,
    "500Hz": -28.456043,
  },
  "sumCorrectedPhase": {
    "10000Hz": -6.714728,
    "1000Hz": -1.487422,
    "100Hz": -18.230706,
    "18000Hz": -34.964603,
    "25Hz": -4.53009,
    "5000Hz": -6.727253,
    "500Hz": 88.917778,
  },
  "sumTargetMag": {
    "10000Hz": 5.960815,
    "1000Hz": 6.017673,
    "100Hz": 5.573285,
    "18000Hz": 4.291645,
    "25Hz": 5.993423,
    "5000Hz": 5.960591,
    "500Hz": -28.456043,
  },
  "sumTargetPhase": {
    "10000Hz": -6.714728,
    "1000Hz": -1.487422,
    "100Hz": -18.230706,
    "18000Hz": -34.964603,
    "25Hz": -4.53009,
    "5000Hz": -6.727253,
    "500Hz": 88.917778,
  },
}
`;

exports[`evaluateSum golden snapshots (b140.10.2 phase-0) > two_bands_coherent — identical flat bands sum to +6 dB 1`] = `
{
  "correctedCoherent": true,
  "freqGridLen": 512,
  "perBandCorrected": [
    {
      "mag": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
      "phase": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
    },
    {
      "mag": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
      "phase": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
    },
  ],
  "sumCorrectedMag": {
    "10000Hz": 6.0206,
    "1000Hz": 6.0206,
    "100Hz": 6.0206,
    "18000Hz": 6.0206,
    "25Hz": 6.0206,
    "5000Hz": 6.0206,
    "500Hz": 6.0206,
  },
  "sumCorrectedPhase": {
    "10000Hz": 0,
    "1000Hz": 0,
    "100Hz": 0,
    "18000Hz": 0,
    "25Hz": 0,
    "5000Hz": 0,
    "500Hz": 0,
  },
  "sumTargetMag": {
    "10000Hz": 6.0206,
    "1000Hz": 6.0206,
    "100Hz": 6.0206,
    "18000Hz": 6.0206,
    "25Hz": 6.0206,
    "5000Hz": 6.0206,
    "500Hz": 6.0206,
  },
  "sumTargetPhase": {
    "10000Hz": 0,
    "1000Hz": 0,
    "100Hz": 0,
    "18000Hz": 0,
    "25Hz": 0,
    "5000Hz": 0,
    "500Hz": 0,
  },
}
`;

exports[`evaluateSum golden snapshots (b140.10.2 phase-0) > two_bands_inverted — polarity cancellation 1`] = `
{
  "correctedCoherent": true,
  "freqGridLen": 512,
  "perBandCorrected": [
    {
      "mag": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
      "phase": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
    },
    {
      "mag": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
      "phase": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
    },
  ],
  "sumCorrectedMag": {
    "10000Hz": -200,
    "1000Hz": -200,
    "100Hz": -200,
    "18000Hz": -200,
    "25Hz": -200,
    "5000Hz": -200,
    "500Hz": -200,
  },
  "sumCorrectedPhase": {
    "10000Hz": 0,
    "1000Hz": 0,
    "100Hz": 0,
    "18000Hz": 0,
    "25Hz": 0,
    "5000Hz": 0,
    "500Hz": 0,
  },
  "sumTargetMag": {
    "10000Hz": -200,
    "1000Hz": -200,
    "100Hz": -200,
    "18000Hz": -200,
    "25Hz": -200,
    "5000Hz": -200,
    "500Hz": -200,
  },
  "sumTargetPhase": {
    "10000Hz": 0,
    "1000Hz": 0,
    "100Hz": 0,
    "18000Hz": 0,
    "25Hz": 0,
    "5000Hz": 0,
    "500Hz": 0,
  },
}
`;

exports[`evaluateSum golden snapshots (b140.10.2 phase-0) > two_bands_with_crossover — a=LP500, b=HP500 1`] = `
{
  "correctedCoherent": true,
  "freqGridLen": 512,
  "perBandCorrected": [
    {
      "mag": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
      "phase": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
    },
    {
      "mag": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
      "phase": {
        "10000Hz": 0,
        "1000Hz": 0,
        "100Hz": 0,
        "18000Hz": 0,
        "25Hz": 0,
        "5000Hz": 0,
        "500Hz": 0,
      },
    },
  ],
  "sumCorrectedMag": {
    "10000Hz": 6.0206,
    "1000Hz": 6.0206,
    "100Hz": 6.0206,
    "18000Hz": 6.0206,
    "25Hz": 6.0206,
    "5000Hz": 6.0206,
    "500Hz": 6.0206,
  },
  "sumCorrectedPhase": {
    "10000Hz": 0,
    "1000Hz": 0,
    "100Hz": 0,
    "18000Hz": 0,
    "25Hz": 0,
    "5000Hz": 0,
    "500Hz": 0,
  },
  "sumTargetMag": {
    "10000Hz": 6.0206,
    "1000Hz": 6.0206,
    "100Hz": 6.0206,
    "18000Hz": 6.0206,
    "25Hz": 6.0206,
    "5000Hz": 6.0206,
    "500Hz": 6.0206,
  },
  "sumTargetPhase": {
    "10000Hz": 0,
    "1000Hz": 0,
    "100Hz": 0,
    "18000Hz": 0,
    "25Hz": 0,
    "5000Hz": 0,
    "500Hz": 0,
  },
}
`;
